# chefsprint

./: .firebaserc  .gitignore  README.md  firestore.rules  storage.rules
engine/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
engine/app/: __init__.py  cli.py  config.py  firebase.py  main.py  models.py  render.py  run.py  units.py  util.py
engine/app/pipeline/: __init__.py  ai.py  categorize.py  images.py  modify.py  nutrition.py  parse.py  scale.py  scrape.py  search.py  understand.py
engine/app/templates/: cookbook.html
engine/app/templates/themes/: doodle-cream.css
engine/tests/: test_pipeline.py
web/: apphosting.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/app/admin/: page.tsx
web/app/components/: CookbookCard.tsx  CreditPackPicker.tsx  FloatingKitchen.tsx  Header.tsx  HeroLogo.tsx  PaywallModal.tsx  ProfileSettingsModal.tsx
web/app/cookbook/[id]/: page.tsx
web/app/credits/: page.tsx
web/app/dashboard/: page.tsx
web/app/new/: page.tsx
web/app/privacy/: page.tsx
web/app/search/: page.tsx
web/app/terms/: page.tsx
web/app/u/[uid]/: page.tsx
web/lib/: api.ts  billing.ts  db.ts  firebase.ts  sound.ts  useAuth.ts
